fix tray icon spacing

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -124,7 +124,7 @@ window#waybar {
 }
 
 #tray {
-  padding: 0;
+  padding: 0 1 0 4px;
 }
 
 /* Audio ------------------------------------------------------- */
